kubernetes-config/external-dns-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    meta.helm.sh/release-name: external-dns
    meta.helm.sh/release-namespace: external-dns
  creationTimestamp: "2021-01-29T03:32:58Z"
  generation: 9
  labels:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    helm.sh/chart: external-dns-4.5.5
  name: external-dns
  namespace: external-dns
  resourceVersion: "454252837"
  uid: 3d18ab34-f6ac-4ce8-90a4-2a57519df5a8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-dns
      app.kubernetes.io/name: external-dns
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-12-21T00:41:31-03:00"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: external-dns
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: external-dns
        helm.sh/chart: external-dns-4.5.5
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: external-dns
                  app.kubernetes.io/name: external-dns
              namespaces:
              - external-dns
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - --log-level=info
        - --log-format=text
        - --domain-filter=staging-dev.stream
        - --domain-filter=staging-xapps.dev
        - --policy=sync
        - --provider=google
        - --registry=txt
        - --interval=1m
        - --txt-owner-id=external-dns-xapps
        - --source=ingress
        - --source=service
        env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /etc/secrets/service-account/credentials.json
        image: docker.io/bitnami/external-dns:0.10.2-debian-10-r0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: external-dns
        ports:
        - containerPort: 7979
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/secrets/service-account/
          name: google-service-account
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      serviceAccount: external-dns
      serviceAccountName: external-dns
      terminationGracePeriodSeconds: 30
      volumes:
      - name: google-service-account
        secret:
          defaultMode: 420
          items:
          - key: credentials.json
            path: credentials.json
          secretName: external-dns
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-01-29T03:32:58Z"
    lastUpdateTime: "2021-12-31T03:27:47Z"
    message: ReplicaSet "external-dns-6464f996b5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-08-26T10:09:37Z"
    lastUpdateTime: "2022-08-26T10:09:37Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 9
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
