kubernetes-config/external-dns-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: external-dns
    meta.helm.sh/release-namespace: external-dns
  creationTimestamp: "2021-01-29T03:32:58Z"
  labels:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    helm.sh/chart: external-dns-4.5.5
  name: external-dns
  namespace: external-dns
  resourceVersion: "444447819"
  uid: 80a2e6f5-cfb4-44e2-b0cb-71255c3eaddb
spec:
  clusterIP: 10.176.12.56
  clusterIPs:
  - 10.176.12.56
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 7979
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: external-dns
    app.kubernetes.io/name: external-dns
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
