kubernetes-config/minio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    field.cattle.io/publicEndpoints: '[{"port":30884,"protocol":"TCP","serviceName":"minio:minio","allNodes":true},{"addresses":["34.138.211.15"],"port":443,"protocol":"HTTPS","serviceName":"minio:minio","ingressName":"minio:minio-ingress","hostname":"minio.staging-xapps.dev","allNodes":false}]'
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio
  creationTimestamp: "2021-06-14T17:32:56Z"
  generation: 855
  labels:
    app: minio
    app.kubernetes.io/managed-by: Helm
    chart: minio-8.0.10
    heritage: Helm
    release: minio
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/managed-by: {}
          f:chart: {}
          f:heritage: {}
          f:release: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:annotations:
              .: {}
              f:checksum/config: {}
              f:checksum/secrets: {}
            f:labels:
              .: {}
              f:app: {}
              f:release: {}
            f:name: {}
          f:spec:
            f:containers:
              k:{"name":"minio"}:
                .: {}
                f:command: {}
                f:env:
                  .: {}
                  k:{"name":"MINIO_ACCESS_KEY"}:
                    .: {}
                    f:name: {}
                    f:valueFrom:
                      .: {}
                      f:secretKeyRef: {}
                  k:{"name":"MINIO_SECRET_KEY"}:
                    .: {}
                    f:name: {}
                    f:valueFrom:
                      .: {}
                      f:secretKeyRef: {}
                f:image: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":9000,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:name: {}
                    f:protocol: {}
                f:resources:
                  .: {}
                  f:requests:
                    .: {}
                    f:memory: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
                f:volumeMounts:
                  .: {}
                  k:{"mountPath":"/export"}:
                    .: {}
                    f:mountPath: {}
                    f:name: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext:
              .: {}
              f:fsGroup: {}
              f:runAsGroup: {}
              f:runAsUser: {}
            f:serviceAccount: {}
            f:serviceAccountName: {}
            f:terminationGracePeriodSeconds: {}
            f:volumes:
              .: {}
              k:{"name":"export"}:
                .: {}
                f:name: {}
                f:persistentVolumeClaim:
                  .: {}
                  f:claimName: {}
              k:{"name":"minio-user"}:
                .: {}
                f:name: {}
                f:secret:
                  .: {}
                  f:defaultMode: {}
                  f:secretName: {}
    manager: Go-http-client
    operation: Update
    time: "2021-06-14T17:32:56Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:template:
          f:spec:
            f:containers:
              k:{"name":"minio"}:
                f:resources:
                  f:requests:
                    f:memory: {}
    manager: kubectl
    operation: Update
    time: "2021-06-14T17:39:23Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:template:
          f:metadata:
            f:annotations:
              f:cattle.io/timestamp: {}
              f:field.cattle.io/ports: {}
              f:field.cattle.io/publicEndpoints: {}
    manager: rancher
    operation: Update
    time: "2022-02-21T15:29:26Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
    manager: kube-controller-manager
    operation: Update
    time: "2022-08-04T12:31:27Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
    manager: agent
    operation: Update
    time: "2022-08-08T12:12:12Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:availableReplicas: {}
        f:conditions:
          k:{"type":"Available"}:
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2022-08-26T03:25:55Z"
  name: minio
  namespace: minio
  resourceVersion: "453986157"
  uid: 21d6c99a-b1f1-43e7-b237-61d10e44c8b2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
      release: minio
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2022-03-12T19:56:40Z"
        checksum/config: 7c481ffb9966b6f77ee7a5f1ee61f1d953938d804f32c718c910c4efac30c080
        checksum/secrets: f7182732dd428b320071542d36fdadf8dfb7a5ccf4ce4acd977c62b78f2768c4
        field.cattle.io/ports: '[[{"containerPort":9000,"dnsName":"minio","kind":"ClusterIP","name":"http","protocol":"TCP"}]]'
        field.cattle.io/publicEndpoints: '[{"addresses":["10.3.0.65"],"allNodes":true,"port":30884,"protocol":"TCP","serviceId":"minio:minio"},{"addresses":["34.138.211.15"],"hostname":"minio.staging-xapps.dev","ingressId":"minio:minio-ingress","port":443,"protocol":"HTTPS","serviceId":"minio:minio"}]'
      creationTimestamp: null
      labels:
        app: minio
        release: minio
      name: minio
    spec:
      containers:
      - command:
        - /bin/sh
        - -ce
        - /usr/bin/docker-entrypoint.sh minio -S /etc/minio/certs/ server /export
        env:
        - name: MINIO_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: accesskey
              name: minio
        - name: MINIO_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: secretkey
              name: minio
        image: minio/minio:RELEASE.2021-02-14T04-01-33Z
        imagePullPolicy: IfNotPresent
        name: minio
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /export
          name: export
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      serviceAccount: minio
      serviceAccountName: minio
      terminationGracePeriodSeconds: 30
      volumes:
      - name: export
        persistentVolumeClaim:
          claimName: minio
      - name: minio-user
        secret:
          defaultMode: 420
          secretName: minio
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-03-13T11:00:12Z"
    lastUpdateTime: "2022-03-13T11:00:17Z"
    message: ReplicaSet "minio-7d857c968d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-08-26T03:25:55Z"
    lastUpdateTime: "2022-08-26T03:25:55Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 855
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
