kubernetes-config/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    external-dns.alpha.kubernetes.io/hostname: minio.staging-xapps.dev
    field.cattle.io/publicEndpoints: '[{"port":30884,"protocol":"TCP","serviceName":"minio:minio","allNodes":true}]'
    meta.helm.sh/release-name: minio
    meta.helm.sh/release-namespace: minio
  creationTimestamp: "2021-06-14T17:32:56Z"
  labels:
    app: minio
    app.kubernetes.io/managed-by: Helm
    chart: minio-8.0.10
    heritage: Helm
    release: minio
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/managed-by: {}
          f:chart: {}
          f:heritage: {}
          f:release: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":9000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
    manager: Go-http-client
    operation: Update
    time: "2021-06-14T17:32:55Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:external-dns.alpha.kubernetes.io/hostname: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:type: {}
    manager: kubectl
    operation: Update
    time: "2021-06-14T17:42:27Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
    manager: agent
    operation: Update
    time: "2022-08-08T12:12:12Z"
  name: minio
  namespace: minio
  resourceVersion: "438194819"
  uid: 7df50ecc-a249-4096-991b-1fb2dc51d867
spec:
  clusterIP: 10.176.3.3
  clusterIPs:
  - 10.176.3.3
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 30884
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    release: minio
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
