kubernetes-config/sso-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "27"
    field.cattle.io/publicEndpoints: '[{"addresses":["34.138.211.15"],"port":443,"protocol":"HTTPS","serviceName":"x-apps-sso:sso-api","ingressName":"x-apps-sso:sso-api","hostname":"sso-api.staging-xapps.dev","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"sso-api","namespace":"x-apps-sso"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"sso-api"}},"template":{"metadata":{"labels":{"app":"sso-api"}},"spec":{"containers":[{"image":"nginx","name":"sso-api","ports":[{"containerPort":80}]}],"restartPolicy":"Always"}}}}'
    kubernetes.io/change-cause: kubectl set image deployment/sso-api sso-api=gcr.io/xapps-software/sso-api:3bf26004-release
      --namespace=x-apps-sso --record=true --insecure-skip-tls-verify=true
  creationTimestamp: "2022-05-23T13:06:02Z"
  generation: 39
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
          f:spec:
            f:containers:
              k:{"name":"sso-api"}:
                .: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":80,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:protocol: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2022-05-23T13:06:02Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:template:
          f:metadata:
            f:annotations:
              .: {}
              f:cattle.io/timestamp: {}
              f:field.cattle.io/ports: {}
          f:spec:
            f:containers:
              k:{"name":"sso-api"}:
                f:ports:
                  k:{"containerPort":80,"protocol":"TCP"}:
                    f:name: {}
                f:securityContext:
                  .: {}
                  f:capabilities: {}
    manager: rancher
    operation: Update
    time: "2022-06-07T12:29:04Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
    manager: kube-controller-manager
    operation: Update
    time: "2022-08-04T12:31:25Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubernetes.io/change-cause: {}
      f:spec:
        f:template:
          f:spec:
            f:containers:
              k:{"name":"sso-api"}:
                f:image: {}
    manager: kubectl-set
    operation: Update
    time: "2022-08-25T11:38:50Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          k:{"type":"Available"}:
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
          k:{"type":"Progressing"}:
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2022-08-26T10:09:04Z"
  name: sso-api
  namespace: x-apps-sso
  resourceVersion: "454252251"
  uid: 8d292a44-536f-4649-8c21-64a8a3994830
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sso-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2022-06-07T12:29:04Z"
        field.cattle.io/ports: '[[{"containerPort":80,"dnsName":"sso-api","hostPort":0,"kind":"ClusterIP","name":"80tcp02","protocol":"TCP","sourcePort":0}]]'
      creationTimestamp: null
      labels:
        app: sso-api
    spec:
      containers:
      - image: gcr.io/xapps-software/sso-api:3bf26004-release
        imagePullPolicy: Always
        name: sso-api
        ports:
        - containerPort: 80
          name: 80tcp02
          protocol: TCP
        resources: {}
        securityContext:
          capabilities: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-06-15T11:00:53Z"
    lastUpdateTime: "2022-08-25T11:39:16Z"
    message: ReplicaSet "sso-api-8cdb755f7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-08-26T10:09:04Z"
    lastUpdateTime: "2022-08-26T10:09:04Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 39
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
