kubernetes-config/sso-api-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"sso-api"},"name":"sso-api","namespace":"x-apps-sso"},"spec":{"ports":[{"port":80}],"selector":{"app":"sso-api"},"type":"ClusterIP"}}
  creationTimestamp: "2022-05-23T13:06:02Z"
  labels:
    app: sso-api
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2022-05-23T13:06:02Z"
  name: sso-api
  namespace: x-apps-sso
  resourceVersion: "444448313"
  uid: e1e688a5-7bd2-4125-930b-8bced3cee2dc
spec:
  clusterIP: 10.176.2.224
  clusterIPs:
  - 10.176.2.224
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sso-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
